--- a/main.html
+++ b/main.html
@@ -5,13 +5,13 @@
 <!-- sets the width of the page to follow the screen-width of the device (which will vary depending on the device). -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap/boot/css/bootstrap.min.css">
 
 <!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="bootstrap/boot/js/jquery-2.2.3.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="bootstrap/boot/js/bootstrap.min.js"></script>
 <!-- custom stylesheet -->
 <link rel="stylesheet" href="main_css.css">
 </head>
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid" id = "header">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#" id="menu-toggle"><span class="glyphicon glyphicon-arrow-down"></span> Placeholder Industries</a>
+      <a class="navbar-brand" href="#" id="menu-toggle"><span class="glyphicon glyphicon-arrow-down"></span> Bean Industries</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
@@ -73,7 +73,7 @@
 	$("#menu-toggle").click(function(expansion){
 		expansion.preventDefault();
 		$("#wrapper").toggleClass("menuDisplayed");
-		});	
+		});		
 	</script>
 
 </body>
