--- a/main.html
+++ b/main.html
@@ -17,6 +17,15 @@
 </head>
 <body>
 
+<?php
+//Session start
+session_start();
+   
+unset($_SESSION["currentUser"]);
+
+   
+?>
+
 <!-- navbar --> 
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid" id = "header">
@@ -31,15 +40,81 @@
 	
 	<!-- right side of navbar-->
 	<ul class="nav navbar-nav navbar-right">
-		<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-		<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>
+		<li><a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+		<li><a href="#" data-toggle="modal" data-target="#myModalLogin"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>
 	</ul>
   </div><!-- fluid container -->  
 </nav><!-- NAV BAR TOP OF PAGE -->
 
+<!-- Modal Sign Up -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Sign Up</h4>
+      </div>
+	  <!-- MODAL BODY -->
+      <div class="modal-body">
+		<form role="form" name="signup" action="main.html">
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" class="form-control" id="email" placeholder="Enter Email">
+			</div>
+			
+			<div class="form-group">
+				<label for="pwd">Password:</label>
+				<input type="password" class="form-control" id="password" placeholder="Enter Password">
+			</div>
+		<button type="submit" class="btn btn-default">Submit</button>
+	</form>   
+  </div>
+  
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Login -->
+<div id="myModalLogin" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Log In</h4>
+      </div>
+	  <!-- MODAL BODY -->
+      <div class="modal-body">
+        <form role="form" name="login" action="main.html">
+			<div class="form-group">
+				<label for="email">Email:</label>
+				<input type="email" class="form-control" id="email" placeholder="Enter Email">
+			</div>
+			
+			<div class="form-group">
+				<label for="pwd">Password:</label>
+				<input type="password" class="form-control" id="password" placeholder="Enter Password">
+			</div>
+		<button type="submit" class="btn btn-default">Submit</button>
+	</form> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Main Wrapper -->
 <div id = "wrapper">
+
 <!-- Sidebar -->
-<br>
 <br>
 <div id="sidebar-wrapper">
 <br>
@@ -48,22 +123,34 @@
 		<li><a href ="#">Account</a></li>
 		<li><a href ="#">Account</a></li>
 	</ul>
-	<input type="text" class="form-control" placeholder="Search Games...">
+	<input type="text" class="form-control" placeholder="Search Games..." id ="searchbar">
 </div>
 
 
 <!-- PAGE CONTENT -->
 <div id = "page-content-wrapper">
+<div class="row">
 	<div class="container-fluid">
-		<div class="row">
-			<div class="colum-lg-12">
-
-				<h1> Sidebar layouts</h1>
-				<p>Test of sidebar expansion</p>
+		
+			<div class="well">
+				<h1>New Releases</h1>
+				<h1><small>Check out our hot new releases with <kbd>KILLER PRICES</kbd></small></h1>
 			</div>
 		</div>
 	</div>
-</div>
+	
+	<div class="row">
+		<div class="col-md-4">
+			<!-- Empty Space -->
+		</div>
+		
+		<!-- Front Page Image CSS Div -->
+		<div class="front-image">
+			<img src = "gow.jpg">
+		</div>
+	</div>
+		
+</div><!-- Content Wrapper -->
 
 <!-- Main wrapper -->
 </div>
@@ -73,7 +160,7 @@
 	$("#menu-toggle").click(function(expansion){
 		expansion.preventDefault();
 		$("#wrapper").toggleClass("menuDisplayed");
-		});		
+		});	
 	</script>
 
 </body>
